<?xml version="1.0"?>
<package format="3">
  <name>assignment</name>
  <version>0.0.1</version>
  <description>Unbox Assignment</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
